@startuml
'https://plantuml.com/class-diagram

class InventoryTracker {
    start()
    main()
}

class InventoryController {
	changeValueCellEvent()
	changeSerialNumberCellEvent()
	changeNameCellEvent()
	saveAsClicked()
	loadClicked()
	closeClicked()
	helpClicked()
	removeItem()
	addNewItem()
	initialize()
	getPeople()
}

class AlertManager {
    alertValue()
    alertSerialNumber()
    alertDuplicateSerialNumber()
    alertName()
    alertHelp()
    helpText()
}

class ConditionsManager {
	validateValue()
	validateSerialNumber()
	validateDuplicateSerialNumber()
	validateName()
	searchBox()
	validateAbsolutePath()
}

class Item {
    - value: String
    - serialNumber: String
    - name: String

	getValue()
	setValue()
	getSerialNumber()
	setSerialNumber()
	getName()
	setName()
}

class ItemFormat {
	toFormattedValue()
	toFormattedSerialNumber()
}

class LoadFileManager {
	loadFile()
	fileChooserLoad()
	loadTSVFile()
	tsvFileReader()
	loadHTMLFile()
	htmlFileReader()
	loadJSONFile()
	parseItemObject()
}

class SaveFileManager {
	writeToFile()
	fileChooserSave()
	writeToTSVFile()
	writeToHTMLFile()
	writeToJSONFile()
	storeDataJSONArray()
}

javafx.org.Application <|- InventoryTracker

InventoryTracker -- InventoryController

InventoryController <- AlertManager
InventoryController <-- ConditionsManager
InventoryController <-- LoadFileManager
InventoryController <-- SaveFileManager

Item - InventoryController
Item -- ConditionsManager
Item -- LoadFileManager
Item -- SaveFileManager
ItemFormat - Item

@enduml